# haihv.github.kernel

./: readme.txt
BKAV_SPI/bkav_spi/: CamCmd.c  CamIni.c  CamIni.h  Makefile  bkav_spidev.c  control.c  gpio.c
BKAV_SPI/driver_spi/: Makefile  bkav_dev.c  note.odt
BKAV_SPI/include/: Cam.h  CamDef.h  CamIni.h  CamModel.h  ControlLens.h  LC898201Typedef.h  bkavspi.h  control.h  gpio.h  spidev.h  var.h
BKAV_SPI/load_driver/: load_driver.sh
GPIO/: Makefile  gpio.c  led_ctrl.c
Test_Driver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  examples  test_spi.c
Test_Driver/spi/: spi.c  spi.h  var.h
